# examples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cc_generic_makefile/: Makefile
cc_generic_makefile/src/: main.cpp
cmake/: CompilerWarnings.cmake
cxx_20_ranges/: CMakeLists.txt  main.cpp
cxx_20_thread_group/: .gitignore  CMakeLists.txt  README.md  main.cpp
cxx_allocator/: CMakeLists.txt  main.cpp
cxx_asound_jack/: CMakeLists.txt  Makefile  README.md  alsa_playback.cpp  interrupt.cpp  jack_capture.cpp  jack_client.cpp  list_devices.cpp
cxx_async/: CMakeLists.txt  main.cpp
cxx_autocorrelation_bitstream/: CMakeLists.txt  main.cpp  test.txt
cxx_boost_filesystem/: CMakeLists.txt  Makefile
cxx_boost_filesystem/src/: main.cpp
cxx_boost_fusion/: CMakeLists.txt
cxx_boost_fusion/src/: main.cpp  network.hpp
cxx_boost_ipc/: CMakeLists.txt  main.cpp
cxx_boost_json/: CMakeLists.txt  enum.hpp  main.cpp  test.hpp  test.json
cxx_boost_process/: .clang-format  CMakeLists.txt
cxx_boost_process/src/: main.cpp
cxx_boost_safe_numerics/: CMakeLists.txt  Makefile  main.cpp
cxx_boost_sml/: CMakeLists.txt  Makefile  dump.hpp  main.cpp
cxx_boost_sml/boost/: sml.hpp
cxx_cmake_shared_lib/: CMakeLists.txt  Makefile  lib.cpp  lib.hpp
cxx_complex/: Makefile  main.cpp
cxx_dft/: CMakeLists.txt  main.cpp
cxx_emscripten/: Makefile
cxx_emscripten/src/: gui.cpp  main.cpp
cxx_generic_makefile/: Makefile
cxx_generic_makefile/src/: main.cpp
cxx_geometry/: CMakeLists.txt  Makefile
cxx_geometry/src/: geometry.hpp  main.cpp
cxx_graph_theory/: CMakeLists.txt  main.cpp
cxx_int128/: main.cpp  uint128_t.hpp
cxx_intel_tbb/: .gitignore
cxx_juce_paths/: Modular.jucer
cxx_juce_paths/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cxx_linalg/: CMakeLists.txt  main.cpp
cxx_linalg/src/: CMakeLists.txt
cxx_linalg/src/etl/: linalg.hpp  mdspan.hpp
cxx_linalg/src/etl/_linalg/: accessor_conjugate.hpp  accessor_scaled.hpp  blas1_add.hpp  blas1_copy.hpp  blas1_matrix_frob_norm.hpp  blas1_scale.hpp  blas1_scaled.hpp  blas1_swap_elements.hpp  blas1_vector_abs_sum.hpp  blas1_vector_idx_abs_max.hpp  blas1_vector_two_norm.hpp  blas2_matrix_vector_product.hpp  concepts.hpp  conjugated.hpp  conjugated_scalar.hpp  contracts.hpp  layout_transpose.hpp  proxy_reference.hpp  scaled_scalar.hpp  tags.hpp
cxx_linalg/tests/: CMakeLists.txt  concepts_test.cpp  conjugated_test.cpp  scale_test.cpp  swap_elements_test.cpp
cxx_linear_algebra/: Makefile  linear_solve.hpp  main.cpp  matrix.hpp  test.cpp  test.gcda  test.gcno  vector.hpp
cxx_linear_algebra/src/: compare.hpp  main.cpp  matrix.hpp  test.cpp  vector.hpp
cxx_linux_input/: .gitignore  Makefile  input.py  main.c
cxx_linux_libdispatch/: Makefile  async.hpp  main.cpp
cxx_linux_proc_info/: .gitignore  Makefile  main.cpp
cxx_llvm_orc_jit/: .clang-tidy  CMakeLists.txt  driver.cpp  test.cpp
cxx_llvm_plugin/: CMakeLists.txt  Makefile  hello.cpp  plugin.cpp
cxx_math/: CMakeLists.txt  main.cpp
cxx_mna/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cxx_mna/src/: main.cpp
cxx_mna/src/mc/: stream.hpp  strings.cpp  strings.hpp
cxx_mna/src/mc/spice/: spice_capacitor.cpp  spice_capacitor.hpp  spice_circuit.cpp  spice_circuit.hpp  spice_element.cpp  spice_element.hpp  spice_inductor.cpp  spice_inductor.hpp  spice_resistor.cpp  spice_resistor.hpp  spice_voltage_source.cpp  spice_voltage_source.hpp
cxx_mna/src/mc/spice/detail/: parse_spice_number.cpp  parse_spice_number.hpp
cxx_mna/test_data/: complex.asc  test.asc  voltage_divider.net
cxx_opencl/: .gitignore  CMakeLists.txt  main.cpp
cxx_physics/: CMakeLists.txt  physics_test.cpp
cxx_physics/physics/: Vec3.hpp
cxx_qt_cmake/: .gitignore
cxx_qt_qml/: CMakeLists.txt
cxx_qt_qml/app/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
cxx_raytracing/: CMakeLists.txt  README.md  image.hpp  main.cpp  pixel_rgb.hpp
cxx_raytracing/src/: image.cpp  image.hpp  main.cpp  pixel_rgb.cpp  pixel_rgb.hpp  ray.cpp  ray.hpp  sphere.hpp  vec3.cpp  vec3.hpp
cxx_registry/: CMakeLists.txt  main.cpp
cxx_runtime_polymorphism/: .gitignore  CMakeLists.txt  Makefile  document.cpp  document.hpp  main.cpp
cxx_scope_guard/: CMakeLists.txt  main.cpp
cxx_simd/: CMakeLists.txt  main.cpp  simd_256.hpp  simd_512.hpp
cxx_simd2voice/: CMakeLists.txt  MathOps_AVX.h  MathOps_Common.h  MathOps_Scalar.h  XBenchmark.h  XDSP.h  XHelpers.h  XIOAdapter.h  XStopWatch.h  YBasicAmp.h  YEQFilter.h  main.cpp
cxx_simple_makefile/: Makefile
cxx_simple_makefile/include/: example.hpp
cxx_simple_makefile/src/: example.cpp  main.cpp
cxx_static_vector/: .gitignore  CMakeLists.txt  Makefile  main.cpp  static_vector.hpp
cxx_sycl/: CMakeLists.txt  README.md  info.cpp  main.cpp
cxx_task_system/: main.cpp
cxx_tbb/: Makefile  main.cpp
cxx_thread_pool/: CMakeLists.txt  Makefile  main.cpp  pool.cpp  pool.hpp  queue.hpp  timer.hpp
cxx_tuple/: CMakeLists.txt  main.cpp  tuple.hpp
cxx_unix_gtk/: CMakeLists.txt  file_dialog.cpp  notification.cpp
cxx_unix_high_res_timer/: .gitignore  Makefile  main.cpp
cxx_unix_wc/: main.cpp
cxx_unix_x11/: .clang-tidy  Makefile  main.cpp
cxx_wave_file/: README.md  main.cpp  wave.hpp
cxx_wayland_client/: Makefile  main.c
cxx_wdf/: CMakeLists.txt  main.cpp
docker_nextcloud_nginx/: docker-compose.yml
go_gioui/: go.mod  go.sum  main.go
py_jinja/: .gitignore  main.py  requirements.txt
py_jinja/templates/: CMakeLists.txt.jinja2  calc.cpp  calc.hpp  main.cpp.jinja2
py_numba/: main.py  requirements.txt
py_pyside2/: audio.py  main.py  reorderable_list_model.py  requirements.txt
py_pyside6/: main.py
py_pyside6/qml/: main.qml
py_pyspice/: main.py  requirements.txt
