cmake_minimum_required(VERSION 3.0.0)
project(examples VERSION 0.1.0)

if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
    set(CMAKE_CXX_EXTENSIONS NO)
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
    set(BUILD_SHARED_LIBS OFF)
    list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
    include(CompilerWarnings)
endif()

add_subdirectory(cxx_20_ranges)
# add_subdirectory(cxx_20_thread_group)
add_subdirectory(cxx_allocator)
add_subdirectory(cxx_async)
add_subdirectory(cxx_autocorrelation_bitstream)
add_subdirectory(cxx_boost_filesystem)
# add_subdirectory(cxx_boost_fusion)
add_subdirectory(cxx_boost_ipc)
# add_subdirectory(cxx_boost_process)
add_subdirectory(cxx_boost_safe_numerics)
add_subdirectory(cxx_dft)
add_subdirectory(cxx_geometry)
add_subdirectory(cxx_graph_theory)
add_subdirectory(cxx_math)
add_subdirectory(cxx_registry)
add_subdirectory(cxx_runtime_polymorphism)
add_subdirectory(cxx_scope_guard)
add_subdirectory(cxx_simd)
# add_subdirectory(cxx_simd2voice)
add_subdirectory(cxx_static_vector)
# add_subdirectory(cxx_thread_pool)
add_subdirectory(cxx_tuple)
add_subdirectory(cxx_wdf)
